# portfolio

./: .gitignore  README.md  contact.html  index.html  projects.html  pyproject.toml  replace_urls.py  resume.html  rxconfig.py  server.py
.github/workflows/: publish_on_git_pages.yml
portfolio/: __info__.py  data.py  models.py  portfolio.py  styles.py
portfolio/components/: __init__.py  miscellaneous.py  skills.py  table.py
portfolio/components/cards/: education_card.py  project_card.py  work_card.py
portfolio/pages/: __init__.py  index.py
portfolio/pages/views/: about_me.py  education.py  footer.py  laboral_experience.py  navbar.py  open_source.py  projects.py  visa.py  welcome.py
